[package]
name = "vhost-user-backend"
version = "0.2.0"
authors = ["The Cloud Hypervisor Authors"]
keywords = ["vhost-user", "virtio"]
description = "A framework to build vhost-user backend service daemon"
edition = "2018"
license = "Apache-2.0"

[dependencies]
libc = ">=0.2.39"
log = ">=0.4.6"
vhost = { git = "https://github.com/vireshk/vhost", features = ["vhost-user-slave"] }
virtio-bindings = "0.1"
virtio-queue = { git = "https://github.com/vireshk/vm-virtio" }
vm-memory = { git = "https://github.com/rust-vmm/vm-memory", features=["backend-mmap", "backend-atomic"] }
vmm-sys-util = "0.9"

[dev-dependencies]
nix = "0.23"
vhost = { git = "https://github.com/vireshk/vhost", features = ["vhost-user-slave"] }
vm-memory = { git = "https://github.com/rust-vmm/vm-memory", features=["backend-mmap", "backend-atomic", "backend-bitmap"] }
tempfile = "3.2.0"
